src/tests/evaluator_error/unknown_operator_integer_infix_expression/snapshots/monkey_interpreter__tests__evaluator_error__unknown_operator_integer_infix_expression__test_unknown_operator_integer_infix_expression_case_4_lexical_analysis.snap
---
source: src/tests/evaluator_error/unknown_operator_integer_infix_expression/mod.rs
expression: tokens
---
[
    False,
    Divide,
    False,
    EndOfFile,
]
