src/tests/evaluator_error/unknown_operator_integer_infix_expression/snapshots/monkey_interpreter__tests__evaluator_error__unknown_operator_integer_infix_expression__test_unknown_operator_integer_infix_expression_case_4_syntax_analysis.snap
---
source: src/tests/evaluator_error/unknown_operator_integer_infix_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Infix {
            left_hand: Boolean {
                boolean: False,
            },
            operator: Divide,
            right_hand: Boolean {
                boolean: False,
            },
        },
    },
]
